--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Em construção</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <title>Nataly Flores</title>
 </head>
 <body>
-    <h1>Nataly Flores</h1>
-    <h2>Em construção</h2>
+    <h1>Em construção...</h1>
+    <h2>Volte em breve!</h2>
 </body>
 </html>
