--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <body>
     <h1>Em construção...</h1>
     <h2>Volte em breve!</h2>
+    <p><a href="https://www.linkedin.com/in/natalyfloresdev/" target="_blank">LinkedIn</a></p>
+    <p><a href="https://github.com/natyxflow" target="_blank">Github</a></p>
+    <p><a href="https://www.facebook.com/natyxflow" target="_blank">Facebook</a></p>
+    <p><a href="https://www.instagram.com/natyxflow/" target="_blank">Instagram</a></p>
 </body>
 </html>
