--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,6 @@
     <title>Currículo</title>
 </head>
 <body>
-    
+    <p><a href="https://drive.google.com/file/d/1AfSo8TjS43-YUyfpbI0US_jFG_pkB2Nk/view?usp=share_link" target="_blank" >Currículo PDF</a></p>
 </body>
 </html>
