--- a/redes_sociais.html
+++ b/redes_sociais.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Redes Sociais</title>
 </head>
 <body>
+    <h1>Redes Sociais</h1>
     <p><a href="https://www.linkedin.com/in/natalyfloresdev/" target="_blank">LinkedIn</a></p>
     <p><a href="https://github.com/natyxflow" target="_blank">Github</a></p>
     <p><a href="https://www.facebook.com/natyxflow" target="_blank">Facebook</a></p>
