--- a/redes_sociais.html
+++ b/redes_sociais.html
@@ -12,5 +12,6 @@
     <p><a href="https://github.com/natyxflow" target="_blank">Github</a></p>
     <p><a href="https://www.facebook.com/natyxflow" target="_blank">Facebook</a></p>
     <p><a href="https://www.instagram.com/natyxflow/" target="_blank">Instagram</a></p>
+    <p><a href="index.html" target="_self"  rel="prev">Página inicial</a></p>
 </body>
 </html>
