--- a/cv.html
+++ b/cv.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p><a href="https://drive.google.com/file/d/1AfSo8TjS43-YUyfpbI0US_jFG_pkB2Nk/view?usp=share_link" target="_blank" >Currículo PDF</a></p>
+    <p><a href="index.html" target="_self"  rel="prev">Página inicial</a></p>
 </body>
 </html>
