--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,6 @@
     <title>Currículo</title>
 </head>
 <body>
-    <p><a href="https://drive.google.com/file/d/1AfSo8TjS43-YUyfpbI0US_jFG_pkB2Nk/view?usp=share_link" target="_blank" >Currículo PDF</a></p>
-    <p><a href="index.html" target="_self"  rel="prev">Página inicial</a></p>
+    <p></p>
 </body>
-</html>
+</html><a href="arquivos/nataly_flores.pdf" download="nataly_flores.pdf" type="application/pdf">Baixar Currículo em PDF</a>
