--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p></p>
+    <header>
+        <h1>Curriculum Vitae</h1>
+    </header>
+    <main>
+        <p><a href="arquivos/nataly_flores.pdf" download="nataly_flores.pdf" type="application/pdf">Baixar Currículo em PDF</a></p>
+        <p><a href="index.html">Home</a></p>
+    </main>
 </body>
-</html><a href="arquivos/nataly_flores.pdf" download="nataly_flores.pdf" type="application/pdf">Baixar Currículo em PDF</a>
+</html>
