--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Em construção...</h1>
-    <h2>Volte em breve!</h2>
-    <p><a href="redes_sociais.html" target="_blank" rel="next" >Minhas Redes Sociais</a></p>
-    <p><a href="cv.html" target="_blank" rel="nexy" >Meu currículo</a></p>
+    <header>
+        <h1>Nataly Flores</h1>
+    </header>
+    <main>
+        <h2>Em construção...</h2>
+        <p>Seja muito bem-vindo(a)!</p>
+        <p><a href="redes_sociais.html" target="_blank" rel="next" >Minhas Redes Sociais</a></p>
+        <p><a href="cv.html" target="_blank" rel="nexy" >Meu currículo</a></p>
+    </main>
    
 </body>
 </html>
