--- a/redes_sociais.html
+++ b/redes_sociais.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Redes Sociais</h1>
-    <p><a href="https://www.linkedin.com/in/natalyfloresdev/" target="_blank">LinkedIn</a></p>
-    <p><a href="https://github.com/natyxflow" target="_blank">Github</a></p>
-    <p><a href="https://www.facebook.com/natyxflow" target="_blank">Facebook</a></p>
-    <p><a href="https://www.instagram.com/natyxflow/" target="_blank">Instagram</a></p>
-    <p><a href="index.html" target="_self"  rel="prev">Página inicial</a></p>
+    <header>
+        <h1>Redes Sociais</h1>
+    </header>
+    <main>
+        <p><a href="https://www.linkedin.com/in/natalyfloresdev/" target="_blank">LinkedIn</a></p>
+        <p><a href="https://github.com/natyxflow" target="_blank">Github</a></p>
+        <p><a href="https://www.facebook.com/natyxflow" target="_blank">Facebook</a></p>
+        <p><a href="https://www.instagram.com/natyxflow/" target="_blank">Instagram</a></p>
+        <p><a href="index.html" target="_self"  rel="prev">Home</a></p>
+    </main>
 </body>
 </html>
